# Communication

./: .gitignore  Cargo.toml  config.toml  memory.x  rust-toolchain.toml  udp_receiver.py
.cargo/: config.toml
abstractions/: UDP.rs
basic/: Cargo.toml
demo/: demo_test.rs  demo_test_002.rs  image_to_stm.py  main_copy.rs  myfile.txt  test_1.py
embedded-blank/: .gitignore  README.md
embedded-blank/stm32h755cm4/: Cargo.toml
embedded-blank/stm32h755cm7/: Cargo.toml
examples/: start.rs  usb_test.rs
initial_ethernet_tests/: Nucleo_1.rs  Nucleo_2.rs
network/: Cargo.toml
network/src/: lib.rs  prelude.rs
network/src/config/: boards.rs  can.rs  mod.rs  network.rs
network/src/hal/: can.rs  clock.rs  ethernet.rs  mod.rs
network/src/protocol/: can_scs.rs  constants.rs  ecu.rs  engine_data.rs  generators.rs  maxx.rs  messages.rs  mod.rs
network/src/sensors/: adc.rs  button.rs  mod.rs  potentiometer.rs
network/src/tasks/: can.rs  mod.rs  net.rs  udp.rs
pc-python-folder/: README.md  crawler-pc-file.py
python/: DEMO1.py  USB_TO_UDP_TEST.py  convert_camerastream_into_frames.py  stm_to_image.py  udp_image.py  webcam_udp.py
python_files/: INSTALL.py  can_receiver.py  test_server.py
src/: main.rs
src/dhcp_client/: Cargo.toml
src/dhcp_client/src/: main.rs
src/ip-distr/: Cargo.toml
src/ip-distr/src/: main.rs
