[package]
name = "basis"
version = "0.1.0"
edition = "2024"


[dependencies]
# Embassy async runtime and HAL
embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-stm32 = { version = "0.1.0", features = ["stm32h755zi-cm7", "time-driver-any", "defmt", "memory-x"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }

# Async support
embassy-sync = { version = "0.6.1" }

# Core embedded dependencies
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"

# Logging and panic handling
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
opt-level = "s"