[package]
name = "basis"
version = "0.1.0"
edition = "2024"  

[dependencies]
# Embassy async runtime and HAL
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.4.0", features = ["stm32h755zi-cm7", "time-driver-any", "defmt", "memory-x"] }
embassy-time = { version = "0.5.0", features = ["defmt", "tick-hz-32_768"] }

# Async support
embassy-sync = { version = "0.7.2" }

# Core embedded dependencies
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"

# Logging and panic handling
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
opt-level = "s"